Asynchronous Execution ex updated

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 <h1>Synchronous And Asynchronous</h1>
 <script>
     /*==================Synchronous Example=================*/
-    // console.log("start")
-    // console.log("mid")
-    // console.log("end")
+    console.log("start")
+    console.log("mid")
+    console.log("end")
     /*==================Asynchronous Example=================*/
     console.log("start")
     setTimeout(()=>{
         console.log("mid")
-    })
+    },2000)
+    console.log("end")
 </script>
 </body>
 </html>
