Asynchronous Execution comment added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         console.log("mid")
     },2000)
     console.log("end")
+
+    /*CHECK THE EX IN THE WEBSITE-https://www.jsv9000.app/*/
 </script>
 </body>
 </html>
